Closed Bug 1743403 Opened 4 years ago Closed 4 years ago

Crash in [@ __strcmp_avx2 | mozilla::gl::EglDisplay::EglDisplay]

Categories

(Core :: Graphics, defect)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox-esr91 --- wontfix
firefox94 --- wontfix
firefox95 --- wontfix
firefox96 --- fixed

People

(Reporter: gsvelto, Assigned: rmader)

References

(Blocks 2 open bugs)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/4ac02f69-00b9-43e1-a32c-c0f3c0211128

Reason: SIGSEGV / SEGV_MAPERR

Top 10 frames of crashing thread:

0 libc.so.6 __strcmp_avx2 
1 libxul.so mozilla::gl::EglDisplay::EglDisplay gfx/gl/GLLibraryEGL.cpp:699
2 libxul.so std::__shared_ptr<mozilla::gl::EglDisplay,  /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/7/bits/shared_ptr_base.h:1327
3 libxul.so mozilla::gl::EglDisplay::Create gfx/gl/GLLibraryEGL.cpp:665
4 libxul.so mozilla::gl::GLLibraryEGL::CreateDisplay gfx/gl/GLLibraryEGL.cpp:791
5 libxul.so mozilla::gl::GLContextEGLFactory::CreateImpl gfx/gl/GLContextProviderEGL.cpp:245
6 libxul.so mozilla::gl::GLContextEGLFactory::Create gfx/gl/GLContextProviderEGL.cpp:334
7 libxul.so mozilla::wr::RenderThread::CreateSingletonGL gfx/webrender_bindings/RenderThread.cpp:957
8 libxul.so mozilla::wr::RenderThread::InitDeviceTask gfx/webrender_bindings/RenderThread.cpp:813
9 libxul.so mozilla::detail::runnable_args_base< dom/media/webrtc/transport/runnable_utils.h:41

The result obtained via mLib->fQueryString(mDisplay, LOCAL_EGL_VENDOR) is being tested against a string literal without checking if it's NULL first and apparently it is in this crash. IIRC eglQueryString() can return NULL so that may be why we're crashing there.

A nullptr here probably indicates a buggy driver - we should
handle the case non the less.

Assignee: nobody → robert.mader
Status: NEW → ASSIGNED
Pushed by robert.mader@posteo.de: https://hg.mozilla.org/integration/autoland/rev/64da1a6eb723 Avoid crash on error in eglQueryString(), r=gfx-reviewers,jgilbert
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: