Bug 1743403 - Avoid crash on error in eglQueryString(), r=gfx-reviewers,jgilbert

A `nullptr` here probably indicates a buggy driver - we should
handle the case non the less.

Differential Revision: https://phabricator.services.mozilla.com/D132398